# XCP

./: .gitignore  .pre-commit-config.yaml  CACHE_BUSTING.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  README.md  STATUS.md  STRUCTURE.md  VALIDATION.md  demo.py  demo_performance.py  demo_v02.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_cache_busting.py  test_validation.py
.cursor/rules/: coding-standard.mdc
benchmarks/: echo_bench.proto  echo_bench_pb2.py  poc_http2_vs_xcp.py  poc_http2_vs_xcp_multi.py  poc_xcp_vs_protobuf.py
hooks/: char_cleanup.py
proto/: control.proto  ether.proto  frame.capnp
revisions/: xcp-v0.1.md  xcp-v0.2-codecs.md  xcp-v0.2-impl-guide.md  xcp-v0.2.md
scripts/: generate_proto.py
tests/: run_test_cache_busting.py  run_test_validation.py  run_test_xcp.py  test_xcp.py  test_xcp_v02.py
xcp/: __init__.py  client.py  constants.py  demo.py  ether.py  frames.py  legacy.py  server.py
xcp/codecs/: __init__.py  base.py  json_codec.py  protobuf_codec.py
