[project]
name = "xcp"
description = "eXtensible Coordination Protocol - A binary-first communication protocol for AI agents"
requires-python = ">=3.11"
authors = [
    {name = "Maida.AI"}
]
dynamic = [
    "version",
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
package-mode = true
packages = [{include = "xcp"}]
version = "0.0.0"

[tool.poetry.dependencies]
# Core XCP v0.2 dependencies
protobuf = "^6.31.1"
pydantic = "^2.10.0"
google-crc32c = "^1.5.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
black = "^25.1.0"
ruff = "^0.12.7"
mypy = "^1.17.0"
pre-commit = "^4.2.0"

[tool.poetry.group.benchmark.dependencies]
httpx = "^0.28.1"
h2 = "^4.2.0"
tqdm = "^4.67.1"
numpy = "^2.3.1"
rich = "^14.0.0"

[project.scripts]
xcp-demo = "xcp.demo:main"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.poetry-dynamic-versioning]
enable = true
from-file = {source="version"}

[tool.poetry-dynamic-versioning.substitution]
files = ["*.py", "*/__init__.py", "*/__version__.py", "*/_version.py"]
patterns = [
    '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])''',
    { value = '''(^__version_tuple__\s*(?::.*?)?=\s*\()[^)]*(\))''', mode = "tuple" },
]

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
